add mobile first

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,33 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header class="header">
+  <nav id="navbar" class="header__nav">
+    <ul class="header__nav--list">
+      <li>
+        <a class="header__nav--link" href="#welcome-section">Inicio</a>
+      </li>
+      <li>
+        <a class="header__nav--link" href="#about">Sobre mi</a>
+      </li>
+      <li>
+        <a class="header__nav--link" href="#projects">Proyectos</a>
+      </li>
+      <li>
+        <a class="header__nav--link" href="#contact">Contacto</a>
+      </li>
+    </ul>
+  </nav>
+  <section id="welcome" class="welcome">
+    <div class="welcome__intro">
+      <h1 class="welcome__intro--title">
+        ¡Hola! Soy <span class="welcome__intro--name">Nuria</span>, <br />Junior Front End Developer
+      </h1>
+      <a href="#contact"><button class="welcome__intro--btn">¿Hablamos?</button></a>
+    </div>
+    <div class="welcome__img">
+      <img
+        class="welcome__img--illustration"
+        src="../assets/images/ilustracion.jpeg"
+        alt="ilustracion chica con portatil"
+      />
+    </div>
+  </section>
 </header>
