--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -1,6 +1,9 @@
 // fonts
-$font-main: "Roboto", sans-serif;
+$font-main: 'Audiowide', cursive;
 
 // colors
 $color-white: #f3f4f5;
-$color-secondary: #999;
+$color-start: #4a306d;
+$color-welcome: #b5ffdb;
+$color-contact: #0fa3b1;
+$color-footer: black;
