--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,10 +1,95 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
+<main>
+  <section class="about">
+    <h2 class="about__title">Sobre mi</h2>
+    <p class="about__description">Estudié Administración y Dirección de Empresas. <br> Y aunque cada experiencia me ha enriquecido profesional y personalmente, decidí dar un paso más y dar un giro a mi futuro profesional, siendo Desarrolladora Front-end.
+      <br>Considero que el éxito está en trabajar en lo que a uno le apasiona, por eso tomé esa arriesgada decisión. Aunque haya cambiado el camino de mi futuro profesional, en otros trabajos siempre han destacado de mi, mi gran capacidad de trabajo, las ganas de seguir aprendiendo y por supuesto, una actitud positiva.</p>
+  </section>
+  <section id="projects" class="projects">
+    <h2 class="projects__title">Mis proyectos</h2>
+    <div class="projects__grid">
+      <article class="container">
+        <a
+          href="https://nuriadiazcandela.github.io/React-project-Rick-Morty-finder/#/"
+          target="_blank"
+          class="container__link">
+          <p class="container__link--title">Buscador personajes Rick y Morty</p>
+          <img class="container__link--image" src="./assets/images/rick.png" alt="project" />
+        </a>
+      </article>
+      <article class="container">
+        <a
+          href="https://nuriadiazcandela.github.io/JS-Buscador-de-series/"
+          target="_blank"
+          class="container__link"
+        >
+          <p class="container__link--title">Buscador de series</p>
+          <img class="container__link--image" src="./assets/images/series.png" alt="project" />
+        </a>
+      </article>
+      <article class="container">
+        <a
+          href="https://nuriadiazcandela.github.io/Adivina-el-numero/"
+          target="_blank"
+          class="container__link"
+        >
+          <p class="container__link--title">Adivina el número</p>
+          <img class="container__link--image" src="./assets/images/adivina.png" alt="project" />
+        </a>
+      </article>
+      <article class="container">
+        <a
+          href="https://nuriadiazcandela.github.io/Pokemon-React/"
+          target="_blank"
+          class="container__link"
+        >
+          <p class="container__link--title">Mi lista de Pokemon</p>
+          <img class="container__link--image" src="./assets/images/pokemon.png" alt="project" />
+        </a>
+      </article>
+      <article class="container">
+        <a
+          href="https://github.com/nuriadiazcandela/Montgomery-Cards-Project/"
+          target="_blank"
+          class="container__link"
+        >
+          <p class="container__link--title">Montgomery Cards</p>
+          <img class="container__link--image" src="./assets/images/cards.png" alt="project" />
+        </a>
+      </article>
+    </div>
+  </section>
+  <section id="contact" class="contact">
+    <div class="contact__description">
+      <h2 class="contact__description--title">¿Hablamos?</h2>
+      <p class="contact__description--paragraph">
+        Estoy buscando mi primera oportunidad como desarrolladora Front End. Si crees que mi perfil
+        encaja con lo que buscas o quieres darme feedback sobre mis proyectos ¡no dudes en
+        contactarme! &#128516
+      </p>
+    </div>
+    <div class="contact__links">
+      <a
+        href="https://www.linkedin.com/in/nuriadiazcandela/"
+        target="_blank"
+        class="contact__links--details"
+        ><i class="fab fa-linkedin fa-2x"></i
+      ></a>
+      <a
+        id="profile-link"
+        href="https://github.com/nuriadiazcandela"
+        target="_blank"
+        class="contact__links--details"
+        ><i class="fab fa-github-square fa-2x"></i
+      ></a>
+      <a href="mailto:nuriadiazcandela@gmail.com" class="contact__links--details"
+        ><i class="fas fa-envelope fa-2x"></i
+      ></a>
+      <a
+        id="profile-link"
+        href="https://drive.google.com/file/d/1FGidpA3ScDHyymg4x0CZiq8eYNQqkMmS/view?usp=sharing"
+        target="_blank"
+        class="contact__links--details"
+        ><i class="fas fa-file-download fa-2x"></i></a>
+    </div>
+  </section>
 </main>
