--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,7 +2,7 @@
   <section class="about">
     <h2 class="about__title">Sobre mi</h2>
     <p class="about__description">Estudié Administración y Dirección de Empresas. <br> Y aunque cada experiencia me ha enriquecido profesional y personalmente, decidí dar un paso más y dar un giro a mi futuro profesional, siendo Desarrolladora Front-end.
-      <br>Considero que el éxito está en trabajar en lo que a uno le apasiona, por eso tomé esa arriesgada decisión. Aunque haya cambiado el camino de mi futuro profesional, en otros trabajos siempre han destacado de mi, mi gran capacidad de trabajo, las ganas de seguir aprendiendo y por supuesto, una actitud positiva.</p>
+      <br>Considero que el éxito está en trabajar en lo que a uno le apasiona, por eso tomé esa arriesgada decisión. </p>
   </section>
   <section id="projects" class="projects">
     <h2 class="projects__title">Mis proyectos</h2>
@@ -92,4 +92,5 @@
         ><i class="fas fa-file-download fa-2x"></i></a>
     </div>
   </section>
+  
 </main>
