--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,3 +1,10 @@
 <footer class="footer">
-  <small>&copy; Made with 💜 by Nuria D.</small>
+  <div class="footer__small">
+    <p>&copy; Made with 💜 by Nuria D.</p>
+  </div>
+  <div class="footer__home">
+    <a class="footer__home--link" href="#header">
+      <i class="footer__home--arrow fas fa-angle-double-up"></i>Inicio
+    </a>
+  </div>
 </footer>
