--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,9 +1,6 @@
-<header class="header">
+<header class="header" id="header">
   <nav id="navbar" class="header__nav">
     <ul class="header__nav--list">
-      <li>
-        <a class="header__nav--link" href="#welcome-section">Inicio</a>
-      </li>
       <li>
         <a class="header__nav--link" href="#about">Sobre mi</a>
       </li>
