--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -3,28 +3,45 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // width: 100%;
-  // height: 80vh;
   padding: 100px 50px 0 50px;
+  @media (min-width: 1024px) {
+    padding-bottom: 50px;
+  }
   &__title {
     color: $color-start;
     padding: 25px 0 15px 0;
     font-size: 20px;
+    @media (min-width: 1024px) {
+      font-size: 35px;
+      padding-bottom: 40px;
+    }
   }
   &__description {
     font-family: 'Nanum Gothic Coding', monospace;
     font-size: 15px;
+    @media (min-width: 1024px) {
+      font-size: 20px;
+    }
   }
 }
 
 .projects {
   text-align: center;
   padding: 50px 32px;
-  // border-top: 1px solid var(--yellow);
+  @media (min-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   &__title {
     max-width: 640px;
     margin: 25px 0 20px 0;
     color: $color-start;
+    @media (min-width: 1024px) {
+      font-size: 35px;
+      padding-bottom: 40px;
+    }
   }
   &__grid {
     display: grid;
@@ -35,17 +52,10 @@
     max-width: 1080px;
     margin: 0 auto;
     margin-bottom: 96px;
-    // &:hover {
-    //   // background-color: var(--yellow);
-    // }
+    @media (min-width: 1024px) {
+      grid-template-columns: auto auto auto;
+    }
   }
-
-  // &--title {
-  //   display: inline;
-  //   color: var(--dark);
-  //   margin-right: 0;
-  //   padding: 0;
-  // }
 }
 .container {
   background: linear-gradient(90deg, #4a306d 0%, #0fa3b1 100%);
@@ -53,9 +63,7 @@
   font-size: 10px;
   text-align: center;
   border-radius: 10%;
-  // box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   &__link {
-    // background: var(--main-gray);
     text-decoration: none;
     color: $color-white;
     &--title {
@@ -70,47 +78,37 @@
   }
 }
 
-// @media (max-width: 320px) {
-//   .projects-section-header {
-//     font-size: 15px;
-//   }
-//   .project-title {
-//     font-size: 15px;
-//   }
-//   .projects-section {
-//     padding: 6rem 1rem;
-//   }
-//   .projects-grid {
-//     grid-template-columns: 1fr;
-//   }
-// }
 .contact {
   background-color: $color-contact;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // width: 100%;
   height: 80vh;
   padding: 50px 50px;
-  // border-top: 1px solid var(--yellow);
   &__description {
     display: flex;
     flex-direction: column;
     &--title {
       font-size: 20px;
+      @media (min-width: 1024px) {
+        font-size: 35px;
+        text-align: center;
+        padding-bottom: 20px;
+      }
     }
     &--paragraph {
       font-family: 'Nanum Gothic Coding', monospace;
       padding-top: 15px;
       font-size: 15px;
+      @media (min-width: 1024px) {
+        font-size: 20px;
+      }
     }
   }
   &__links {
     display: flex;
     justify-content: space-between;
-    // width: 100%;
-    // max-width: 980px;
     padding-top: 64px;
     flex-wrap: nowrap;
     &--details {
@@ -121,22 +119,13 @@
       background: linear-gradient(45deg, rgba(74, 48, 109, 1) 0%, rgba(15, 163, 177, 1) 100%);
       color: $color-contact;
       border-radius: 15%;
+      @media (min-width: 1024px) {
+        font-size: 20px;
+        margin-right: 30px;
+      }
       :hover {
         transform: translateY(8px);
       }
     }
   }
 }
-
-// @media (max-width: 320px) {
-//   .contact-title {
-//     font-size: 25px;
-//   }
-//   .contact-details {
-//     font-size: 15px;
-//     text-shadow: none;
-//   }
-//   .contact-details i {
-//     padding-right: 10px;
-//   }
-// }
