--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -22,7 +22,7 @@
     <div class="welcome__img">
       <img
         class="welcome__img--illustration"
-        src="../assets/images/ilustracion.jpg"
+        src="./assets/images/ilustracion.jpg"
         alt="ilustracion chica con portatil"
       />
     </div>
