--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 100px 50px 0 50px;
+  background: linear-gradient(90deg, #0fa3b1 0%, #b5ffdb 100%);
   @media (min-width: 1024px) {
     padding-bottom: 50px;
   }
@@ -19,8 +20,10 @@
   &__description {
     font-family: 'Nanum Gothic Coding', monospace;
     font-size: 15px;
+    padding-bottom: 50px;
     @media (min-width: 1024px) {
       font-size: 20px;
+      text-align: justify;
     }
   }
 }
