--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -26,6 +26,34 @@
       text-align: justify;
     }
   }
+  &__skills {
+    font-size: 20px;
+    color: $color-start;
+    padding-bottom: 15px;
+    @media (min-width: 1024px) {
+      font-size: 35px;
+      padding-bottom: 30px;
+    }
+  }
+  &__list {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    font-size: 10px;
+    text-align: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
+    @media (min-width: 1024px) {
+      font-size: 15px;
+    }
+    &--item {
+      padding-bottom: 10px;
+      @media (min-width: 1024px) {
+        padding: 20px 20px 20px 20px;
+      }
+    }
+  }
 }
 
 .projects {
@@ -52,7 +80,6 @@
     grid-gap: 20px;
     width: 100%;
     height: 100%;
-    max-width: 1080px;
     margin: 0 auto;
     margin-bottom: 96px;
     @media (min-width: 1024px) {
@@ -62,7 +89,7 @@
 }
 .container {
   background: linear-gradient(90deg, #4a306d 0%, #0fa3b1 100%);
-  padding: 20px 20px 60px 20px;
+  padding: 20px 20px 20px 20px;
   font-size: 10px;
   text-align: center;
   border-radius: 10%;
@@ -71,12 +98,22 @@
     color: $color-white;
     &--title {
       font-size: 15px;
+      font-weight: 400;
       padding-bottom: 10px;
     }
     &--image {
-      height: 100%;
       width: 100%;
       object-fit: cover;
+      padding-bottom: 10px;
+    }
+    &--description {
+      font-size: 12px;
+      padding-bottom: 5px;
+      color: $color-white;
+    }
+    &--code {
+      color: $color-white;
+      font-size: 15px;
     }
   }
 }
