--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,8 @@
 @import 'core/variables';
 @import 'core/reset';
-@import 'layout/page';
 @import 'layout/header';
+@import 'layout/about';
+@import 'layout/projects';
+@import 'layout/contact';
 @import 'layout/footer';
 @import 'pages/index';
