change link montgomery

--- a/src/html/partials/projects.html
+++ b/src/html/partials/projects.html
@@ -91,7 +91,7 @@
     </article>
     <article class="container">
       <a
-        href="https://github.com/nuriadiazcandela/Montgomery-Cards-Project/"
+        href="http://evaferrerasbr.github.io/project-promo-k-module-2-team-4//"
         target="_blank"
         class="container__link"
       >
@@ -109,7 +109,7 @@
       ></a>
       <a
         class="container__link--code"
-        href="https://github.com/nuriadiazcandela/Montgomery-Cards-Project/"
+        href="http://evaferrerasbr.github.io/project-promo-k-module-2-team-4/"
         ><i class="fas fa-laptop"></i
       ></a>
     </article>
