--- a/src/html/partials/about.html
+++ b/src/html/partials/about.html
@@ -8,12 +8,15 @@
   </p>
   <h3 class="about__skills">Skills</h3>
   <ul class="about__list">
-    <li class="about__list--item"><img src="./assets/images/html5.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/css-3.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/archivo-js.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/atom.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/git-logo.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/sass.png" alt="" /></li>
-    <li class="about__list--item"><img src="./assets/images/gulp.png" alt="" /></li>
+    <li class="about__list--item"><i class="fab fa-html5 fa-3x" title="html5"></i></li>
+    <li class="about__list--item"><i class="fab fa-css3-alt fa-3x" title="css3"></i></li>
+    <li class="about__list--item"><i class="fab fa-js-square fa-3x" title="js"></i></li>
+    <li class="about__list--item"><i class="fab fa-react fa-3x" title="react"></i></li>
+    <li class="about__list--item"><i class="fab fa-git-square fa-3x" title="git"></i></li>
+    <li class="about__list--item"><i class="fab fa-sass fa-3x" title="sass"></i></li>
+    <li class="about__list--item"><i class="fab fa-gulp fa-3x" title="gulp"></i></li>
   </ul>
+  <h3 class="about__skills">Aprendiendo...</h3>
+  <ul class="about__list">
+    <li class="about__list--item"><i class="fab fa-php fa-3x" title="php"></i></li>
 </section>
