--- a/src/html/partials/contact.html
+++ b/src/html/partials/contact.html
@@ -12,23 +12,23 @@
         href="https://www.linkedin.com/in/nuriadiazcandela/"
         target="_blank"
         class="contact__links--details"
-        ><i class="fab fa-linkedin fa-2x"></i
+        ><i class="fab fa-linkedin fa-2x" title="Ir a Linkedin"></i
       ></a>
       <a
         id="profile-link"
         href="https://github.com/nuriadiazcandela"
         target="_blank"
         class="contact__links--details"
-        ><i class="fab fa-github-square fa-2x"></i
+        ><i class="fab fa-github-square fa-2x" title="Ir a Github"></i
       ></a>
       <a href="mailto:nuriadiazcandela@gmail.com" class="contact__links--details"
-        ><i class="fas fa-envelope fa-2x"></i
+        ><i class="fas fa-envelope fa-2x" title="Mandar email"></i
       ></a>
       <a
         id="profile-link"
         href="https://drive.google.com/file/d/1FGidpA3ScDHyymg4x0CZiq8eYNQqkMmS/view?usp=sharing"
         target="_blank"
         class="contact__links--details"
-        ><i class="fas fa-file-download fa-2x"></i></a>
+        ><i class="fas fa-cloud-download-alt fa-2x" title="Descargar CV"></i></a>
     </div>
   </section>
