--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="footer__small">
-    <p>&copy; Made with 💜 by Nuria D.</p>
+    <p>&copy; 2021 Nuria Díaz Candela</p>
   </div>
   <div class="footer__home">
     <a class="footer__home--link" href="#header">
