--- a/src/html/partials/projects.html
+++ b/src/html/partials/projects.html
@@ -17,12 +17,12 @@
       <a
         class="container__link--code"
         href="https://github.com/nuriadiazcandela/React-project-Rick-Morty-finder"
-        ><i class="fas fa-code"></i
+        ><i class="fas fa-code" title="Ver código"></i
       ></a>
       <a
         class="container__link--code"
         href="https://nuriadiazcandela.github.io/React-project-Rick-Morty-finder/#/"
-        ><i class="fas fa-laptop"></i
+        ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
     <article class="container">
@@ -41,12 +41,12 @@
       <a
         class="container__link--code"
         href="https://github.com/nuriadiazcandela/JS-Buscador-de-series"
-        ><i class="fas fa-code"></i
+        ><i class="fas fa-code" title="Ver código"></i
       ></a>
       <a
         class="container__link--code"
         href="https://nuriadiazcandela.github.io/JS-Buscador-de-series/"
-        ><i class="fas fa-laptop"></i
+        ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
     <article class="container">
@@ -63,10 +63,10 @@
         tu apuesta, sigue las pistas y reduce tu número de intentos para completar el juego.
       </p>
       <a class="container__link--code" href="https://github.com/nuriadiazcandela/Adivina-el-numero"
-        ><i class="fas fa-code"></i
+        ><i class="fas fa-code" title="Ver código"></i
       ></a>
       <a class="container__link--code" href="https://nuriadiazcandela.github.io/Adivina-el-numero/"
-        ><i class="fas fa-laptop"></i
+        ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
     <article class="container">
@@ -83,10 +83,10 @@
         información relevante.
       </p>
       <a class="container__link--code" href="https://github.com/nuriadiazcandela/Pokemon-React"
-        ><i class="fas fa-code"></i
+        ><i class="fas fa-code" title="Ver código"></i
       ></a>
       <a class="container__link--code" href="https://nuriadiazcandela.github.io/Pokemon-React/"
-        ><i class="fas fa-laptop"></i
+        ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
     <article class="container">
@@ -105,12 +105,12 @@
       <a
         class="container__link--code"
         href="https://github.com/nuriadiazcandela/Montgomery-Cards-Project"
-        ><i class="fas fa-code"></i
+        ><i class="fas fa-code" title="Ver código"></i
       ></a>
       <a
         class="container__link--code"
         href="http://evaferrerasbr.github.io/project-promo-k-module-2-team-4/"
-        ><i class="fas fa-laptop"></i
+        ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
   </div>
