--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -49,6 +49,7 @@
     }
     &--item {
       padding-bottom: 10px;
+      padding-right: 7px;
       @media (min-width: 1024px) {
         padding: 20px 20px 20px 20px;
       }
