add project and learning

--- a/src/html/partials/about.html
+++ b/src/html/partials/about.html
@@ -14,9 +14,9 @@
     <li class="about__list--item"><i class="fab fa-react fa-3x" title="react"></i></li>
     <li class="about__list--item"><i class="fab fa-git-square fa-3x" title="git"></i></li>
     <li class="about__list--item"><i class="fab fa-sass fa-3x" title="sass"></i></li>
-    <li class="about__list--item"><i class="fab fa-gulp fa-3x" title="gulp"></i></li>
   </ul>
   <h3 class="about__skills">Aprendiendo...</h3>
   <ul class="about__list">
     <li class="about__list--item"><i class="fab fa-php fa-3x" title="php"></i></li>
+    <li class="about__list--item"><img src="./assets/images/prestashop.png" title="prestashop"></img></li>
 </section>
