--- a/src/html/partials/projects.html
+++ b/src/html/partials/projects.html
@@ -113,5 +113,26 @@
         ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
+    <article class="container">
+      <a
+        href="https://nuriadiazcandela.github.io/Drum-kit/"
+        target="_blank"
+        class="container__link"
+      >
+        <h3 class="container__link--title">Drum-kit</h3>
+        <img class="container__link--image" src="./assets/images/drumkit.png" alt="project" />
+      </a>
+      <p class="container__link--description">
+        Proyecto JS#30. Según pulses en tu teclado una de las letras que aparecen en la pantalla, se
+        escuchará un sonido distinto simulando una batería y se iluminará unos segundos la tecla
+        seleccionada.
+      </p>
+      <a class="container__link--code" href="https://github.com/nuriadiazcandela/Drum-kit"
+        ><i class="fas fa-code" title="Ver código"></i
+      ></a>
+      <a class="container__link--code" href="https://nuriadiazcandela.github.io/Drum-kit/"
+        ><i class="fas fa-laptop" title="Ver página web"></i
+      ></a>
+    </article>
   </div>
 </section>
