--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -24,6 +24,8 @@
     @media (min-width: 1024px) {
       font-size: 20px;
       text-align: justify;
+      padding-left: 50px;
+      padding-right: 50px;
     }
   }
   &__skills {
