--- a/src/scss/layout/_contact.scss
+++ b/src/scss/layout/_contact.scss
@@ -23,6 +23,8 @@
       font-size: 15px;
       @media (min-width: 1024px) {
         font-size: 20px;
+        padding-left: 50px;
+        padding-right: 50px;
       }
     }
   }
