add mediaqueries 1500px

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -15,7 +15,8 @@
   <section id="welcome" class="welcome">
     <div class="welcome__intro">
       <h1 class="welcome__intro--title">
-        ¡Hola! Soy <span class="welcome__intro--name">Nuria</span>, <br />Junior Front End Developer
+        ¡Hola! Soy <span class="welcome__intro--name">Nuria</span>,
+        <br />Junior Front End Developer</span> <br />
       </h1>
       <a href="#contact"><button class="welcome__intro--btn">¿Hablamos?</button></a>
     </div>
