--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -27,6 +27,10 @@
       padding-left: 50px;
       padding-right: 50px;
     }
+    @media (min-width: 1500px) {
+      padding-left: 250px;
+      padding-right: 250px;
+    }
   }
   &__skills {
     font-size: 20px;
