add in projects link github

--- a/src/html/partials/projects.html
+++ b/src/html/partials/projects.html
@@ -135,4 +135,16 @@
       ></a>
     </article>
   </div>
+  <div>
+    <p class="projects__paragraph">
+      *Para ver más proyectos en los que sigo aprendiendo, puedes visitar mi
+      <a
+        class="projects__paragraph--link"
+        href="https://github.com/nuriadiazcandela"
+        target="_blank"
+        title="Enlace a github"
+        >Github</a
+      >
+    </p>
+  </div>
 </section>
