--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -29,8 +29,8 @@
       }
       &:hover {
         color: $color-contact;
-        text-decoration: underline;
         transition: linear 0.2s;
+        text-shadow: 1px 1px 1px $color-start;
       }
     }
   }
