add changes contact

--- a/src/html/partials/about.html
+++ b/src/html/partials/about.html
@@ -14,6 +14,7 @@
     <li class="about__list--item"><i class="fab fa-react fa-3x" title="react"></i></li>
     <li class="about__list--item"><i class="fab fa-git-square fa-3x" title="git"></i></li>
     <li class="about__list--item"><i class="fab fa-sass fa-3x" title="sass"></i></li>
+    <li class="about__list--item"><i class="fab fa-bootstrap fa-3x" title="bootstrap"></i></li>
   </ul>
   <!-- <h3 class="about__skills">Aprendiendo...</h3>
   <ul class="about__list">
