add news projects

--- a/src/html/partials/about.html
+++ b/src/html/partials/about.html
@@ -1,10 +1,12 @@
 <section class="about" id="about">
   <h2 class="about__title">Sobre mi</h2>
   <p class="about__description">
-    Estudié Administración y Dirección de Empresas. <br />
-    Y aunque cada experiencia me ha enriquecido profesional y personalmente, decidí ir más allá y
-    dar un giro a mi futuro profesional, siendo Desarrolladora Front-end. <br />Considero que el
-    éxito está en trabajar en lo que a uno le apasiona, por eso tomé esa arriesgada decisión.
+    Estudié Administración y Dirección de Empresas. Y aunque cada experiencia me ha enriquecido
+    profesional y personalmente, decidí ir más allá y dar un giro a mi futuro profesional, siendo
+    <span>Desarrolladora Front-end &#128579;</span>. <br />Considero que el éxito está en trabajar
+    en lo que a uno le apasiona, por eso tomé esa arriesgada decisión.<br />
+    Me encanta seguir aprendiendo y en este sector he descubierto un mundo apasionante lleno de
+    posibilidades que me motiva a mejorar día a día.
   </p>
   <h3 class="about__skills">Skills</h3>
   <ul class="about__list">
@@ -17,7 +19,7 @@
     <li class="about__list--item"><i class="fab fa-bootstrap fa-3x" title="bootstrap"></i></li>
   </ul>
   <!-- <h3 class="about__skills">Aprendiendo...</h3>
-  <ul class="about__list">
-    <li class="about__list--item"><i class="fab fa-php fa-3x" title="php"></i></li>
-    <li class="about__list--item"><img src="./assets/images/prestashop.png" title="prestashop"></img></li> -->
+    <ul class="about__list">
+      <li class="about__list--item"><i class="fab fa-php fa-3x" title="php"></i></li>
+      <li class="about__list--item"><img src="./assets/images/prestashop.png" title="prestashop"></img></li> -->
 </section>
