--- a/src/html/partials/projects.html
+++ b/src/html/partials/projects.html
@@ -11,8 +11,8 @@
         <img class="container__link--image" src="./assets/images/rick.png" alt="project" />
       </a>
       <p class="container__link--description">
-        Aplicación web de búsqueda de personajes de la serie Rick y Morty. Si pinchas en cualquiera,
-        aparece una tarjeta con información más detallada del personaje.
+        App web de búsqueda de personajes. Si pinchas en cualquiera, aparece una tarjeta con
+        información más detallada del personaje.
       </p>
       <a
         class="container__link--code"
@@ -22,6 +22,26 @@
       <a
         class="container__link--code"
         href="https://nuriadiazcandela.github.io/React-project-Rick-Morty-finder/#/"
+        ><i class="fas fa-laptop" title="Ver página web"></i
+      ></a>
+    </article>
+    <article class="container">
+      <a
+        href="https://nuriadiazcandela.github.io/Whack-A-Mole-Game/"
+        target="_blank"
+        class="container__link"
+      >
+        <h3 class="container__link--title">Aplasta al topo</h3>
+        <img class="container__link--image" src="./assets/images/topo.png" alt="project" />
+      </a>
+      <p class="container__link--description">
+        Proyecto JS#30. Un juego sencillo en el que hay que golpear topos cuando salgan de sus
+        agujeros.
+      </p>
+      <a class="container__link--code" href="https://github.com/nuriadiazcandela/Whack-A-Mole-Game"
+        ><i class="fas fa-code" title="Ver código"></i
+      ></a>
+      <a class="container__link--code" href="https://nuriadiazcandela.github.io/Whack-A-Mole-Game/"
         ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
@@ -46,6 +66,29 @@
       <a
         class="container__link--code"
         href="https://nuriadiazcandela.github.io/JS-Buscador-de-series/"
+        ><i class="fas fa-laptop" title="Ver página web"></i
+      ></a>
+    </article>
+    <article class="container">
+      <a
+        href="https://nuriadiazcandela.github.io/Rock-paper-scissors/"
+        target="_blank"
+        class="container__link"
+      >
+        <h3 class="container__link--title">Piedra, papel o tijeras</h3>
+        <img class="container__link--image" src="./assets/images/piedra.png" alt="project" />
+      </a>
+      <p class="container__link--description">
+        Proyecto inspirado en el juego javascript freecodecamp rock paper scissor.
+      </p>
+      <a
+        class="container__link--code"
+        href="https://github.com/nuriadiazcandela/Rock-paper-scissors"
+        ><i class="fas fa-code" title="Ver código"></i
+      ></a>
+      <a
+        class="container__link--code"
+        href="https://nuriadiazcandela.github.io/Rock-paper-scissors/"
         ><i class="fas fa-laptop" title="Ver página web"></i
       ></a>
     </article>
