--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,7 +2,7 @@
 $font-main: 'Audiowide', cursive;
 
 // colors
-$color-white: #f3f4f5;
+$color-white: #b5ffdb;
 $color-start: #4a306d;
 $color-welcome: #b5ffdb;
 $color-contact: #0fa3b1;
