--- a/src/html/partials/contact.html
+++ b/src/html/partials/contact.html
@@ -2,7 +2,7 @@
     <div class="contact__description">
       <h2 class="contact__description--title">¿Hablamos?</h2>
       <p class="contact__description--paragraph">
-        Tengo 6 meses de experiencia como desarrolladora Front End y sigo formándome y ampliando conocimientos. Actualmente, estoy realizando un Master en Front End en Lemoncode &#127819. Si crees que mi perfil
+        Tengo algo más de 1 año de experiencia como desarrolladora Front End y sigo formándome y ampliando conocimientos. Actualmente, estoy realizando un Master en Front End en Lemoncode &#127819, en el que sigo aprendiendo más sobre React, además de Angular, Vue y más... Si crees que mi perfil
         encaja con lo que buscas o quieres darme feedback ¡no dudes en
         contactarme! &#128516
       </p>
