--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -65,6 +65,7 @@
     &--name {
       color: $color-contact;
     }
+
     &--btn {
       width: 150px;
       height: 50px;
@@ -76,6 +77,10 @@
       border-radius: 30px;
       margin-top: 30px;
       cursor: pointer;
+      transition: all 0.5s ease-in-out;
+      &:hover {
+        opacity: 0.7;
+      }
       @media (min-width: 1024px) {
         width: 240px;
         box-shadow: 1px 3px 10px #0a00006e;
